(refactor):Add some more styling to create_recipe.html (fix): html no longer hidden by fixed footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,7 @@ body {
     height: 100%;
     width: 100%;
     background-color: #f8f9fa;
+    margin-bottom: 200px;
 }
 
 /*===== NAVBAR =====*/
